fix(dashboard): remove extra padding

--- a/src/components/Dashboard/_dashboard.scss
+++ b/src/components/Dashboard/_dashboard.scss
@@ -64,8 +64,3 @@
 .react-resizable-hide .react-resizable-handle {
   display: none;
 }
-
-// fix to preserve default padding on top
-.react-grid-layout {
-  padding-top: 1rem;
-}
